Fix slider on mobile

--- a/resources/assets/sass/components/menu_preview.scss
+++ b/resources/assets/sass/components/menu_preview.scss
@@ -138,12 +138,12 @@
 
 @media(max-width: 992px) {
     .menu-preview-content-container {
-        height: 50vh;
+        height: 100vh;
         width: 100%;
 
     }
     .menu-preview-image-container {
         width: 100%;
-        height: 50vh;
+        height: 100vh;
     }
 }
